:lipstick: Fixed user profile overflow on ArtcleView2 UI.

--- a/src/components/blrmn/ArticleView2/style.module.scss
+++ b/src/components/blrmn/ArticleView2/style.module.scss
@@ -34,3 +34,7 @@
     margin-bottom: 0;
   }
 }
+
+.article-title-text{
+  max-lines: 4;
+}
